fixed some error

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "ir.dideo.dideo"
-        minSdkVersion 15
+        minSdkVersion 17
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,8 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile files('libs/gson-2.0.jar')
     compile files('libs/volley.jar')
+    compile files('libs/urlimageviewhelper-1.0.4.jar')
     compile files('libs/ormlite-android-4.48.jar')
     compile files('libs/ormlite-core-4.48.jar')
+    compile project(':vita')
 }
